<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Rtcguild</string>
    <string name="app_desc">Rtcguild website application</string>
    <string name="action_settings">تنظیمات</string>
    <string name="fixaddress">info@faragostaresh.com</string>
    <string name="faragostaresh">فراگسترش</string>
    
    <string name="about_us_text_1">هسته اوليه انجمن صنفي شركتهاي حمل ونقل ريلي و خدمات وابسته در سنوات نه چندان دور توسط حدود (11) شركت بخش خصوصي كه عمدتاً راهبري قطارهاي مسافري و يا ارائه خدمات وابسته به آن را عهده دار بودند شكل گرفت.</string>
    <string name="about_us_text_2">اين شركتها بنا به ضرورت و صلاحديد و حفظ حقوق و منافع مشروع و قانوني خود بر آن شدند تا در راستاي بهبود وضع اقتصادي كارگران خود و كارفرمايان كه خود حافظ منافع جامعه نيزمي باشد بر اساس قوانين و مقررات جاري كشور و به اعتبار فعاليتهاي راهبري و خدمات مسافري انجمن صنفي تشكيل دهند.</string>
    <string name="about_us_text_3">شركتهاي موصوف پس از تشكيل هيأت مؤسس و فراهم سازي مقدمات اوليه و ضرور موفق شدند در اجراي ماده 131 قانون كار ج.ا.ا اساسنامه انجمن را در وزارت كار و امور اجتماعي به ثبت رسانيده و گواهينامه فعاليت انجمن را به شماره ثبت (231) از وزارتخانه مزبور دريافت نمايند.</string>
    <string name="about_us_text_4">انجمن صنفي از تاريخ 1380/10/17و با توجه به اهميت نقش اين قبيل تشكل ها در شكل گيري اهداف و سياستها و برنامه هاي توسعه و گسترش صنعت ريلي كشور و همچنين ارتقاء جايگاه ترابري ريلي در كشور و منطقه و بهبود بخشيدن به امور حمل و نقل كشور و نيز در رابطه با سياستها و برنامه هاي توسعه انساني، اقتصادي، اجتماعي و فرهنگي و شناخت نيازها و مسائل مشترك شركتها و ضرورت برقراري ارتباطات نزديك و تبادل نظر و تعامل و همكاري في مابين با هدف هم سوئي و هم فكري و تأثيرگذاري در شكل دهي سياست ها و برنامه هاي توسعه اقتصادي و ارتقاء جايگاه آن و بهره وري هرچه بهترازمنافع و با توجه بايسته به سرمايه گذاري، اشتغال زائي، رونق بخشي و در نهايت تحقق سياست هاي دولت و اجراي قوانين و مقررات انجمن رسماً فعاليت خود را آغاز نمود.</string>
    <string name="about_us_text_5">انجمن در حال حاضر داراي 53 عضو مي باشد كه از اين تعداد 2 شركت در امر حمل ونقل ريلي  قطارهاي مسافري و باري و 17 شركت در امر حمل ونقل ريلي باري  و 7 شركت در امر حمل ونقل ريلي  مسافري و 12 شركت نيز در امر راهبري قطارهاي مسافري و 2 شرکت در امر خدمات وابسته و 9 شرکت در امر فورواردری و 3 شرکت در امر لکوموتیو و 1 شرکت در امر لکوموتیو، باری و راهبری قطارهای مسافری فعاليت دارند و تا امروز بیش از 90 درصد از واگن های باری و 40 درصد از واگن های مسافری فعال در شبکه ریلی کشور متعلق به شرکت های خصوصی عضو این انجمن می باشد.</string>
    <string name="about_us_text_6">یادآور می شود که بخش خصوصی از آغاز فعالیت خود تاکنون توانسته است حمل ونقل ریلی را در سطح کشور همه ساله به رشد قابل قبولی برساند و این روند در سال های آتی نیز تداوم خواهد داشت.</string>
    <string name="about_us_faragostaresh">پیاده سازی و توسعه نرم افزار اندروید انجمن صنفی شرکت های حمل و نقل ریلی و خدمات وابسته توسط فراگسترش به انجام رسیده است</string>
    
    <string name="btnsend">ارسال</string>
    <string name="subject">موضوع</string>
    <string name="name">نام</string>
    <string name="email">ایمیل</string>
    <string name="message">پیام</string>
    
    <string name="d_internet">خطا اتصال اینترنت</string>
    <string name="d_internet_contact">برای استفاده از بخش تماس با ما، ابتدا باید به اینترنت وصل شوید.</string>
    <string name="d_internet_image">برای لود شدن تصاویر از وب سایت، ابتدا باید به اینترنت وصل شوید.</string>
    <string name="d_internet_access">نرم افزار به اینترنت دسترسی ندارد. در نتیجه امکان به روز رسانی داده ها وجود نداشته و نسخه آفلاین به شما نمایش داده می شود</string>
    <string name="d_internet_access_count">برای اولین استفاده باید به اینترنت وصل شوید تا اطلاعات از طریق وب سایت به روز شود</string>
    <string name="d_processing">در حال دریافت اطلاعات</string>
    <string name="d_wait">این روند اندکی زمان بر است، لطفا صبر داشته باشید.</string>
    <string name="d_error">خطا</string>
    <string name="d_content">تمام فیلد ها را باید تکمیل کنید</string>
    
    <string name="update_title">نسخه جدید نرم افزار منتشر شد</string>
    <string name="update_now">به روز کن</string>
    <string name="update_remind_later">بعدا اطلاع بده</string>
    <string name="update_ignore">نادیده بگیر</string>
    
    <string name="image">تصویر</string>

</resources>
